auto delete log files

--- a/env/.env.sample
+++ b/env/.env.sample
@@ -29,6 +29,10 @@ REQUESTS_PER_HOUR_BY_USER=1000
 
 PING_SERVER_EVERY=20s
 
+# Delete OLD log files
+CHECK_LOG_FILES_EVERY=24h  # every 24 check log files
+DELETE_LOG_FILES_OLDER_THAN_X_DAYS=7 # and delete files older than 7 days
+
 
 
 ALLOWHTMLTEMPLATES=Y
